test_uia/err.txt
    Checking test_uia v0.1.0 (E:\data\Work_Review\test_uia)
warning: unused imports: `UILegacyIAccessiblePattern` and `UIValuePattern`
 --> src\main.rs:2:30
  |
2 | use uiautomation::patterns::{UIValuePattern, UILegacyIAccessiblePattern};
  |                              ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `get_class_name` found for struct `UIElement` in the current scope
  --> src\main.rs:34:32
   |
34 |                         child1.get_class_name().unwrap_or_default()
   |                                ^^^^^^^^^^^^^^
   |
help: there is a method `get_classname` with a similar name
   |
34 -                         child1.get_class_name().unwrap_or_default()
34 +                         child1.get_classname().unwrap_or_default()
   |

error[E0599]: no method named `get_class_name` found for struct `UIElement` in the current scope
  --> src\main.rs:42:40
   |
42 | ...                   child2.get_class_name().unwrap_or_default()
   |                              ^^^^^^^^^^^^^^
   |
help: there is a method `get_classname` with a similar name
   |
42 -                                 child2.get_class_name().unwrap_or_default()
42 +                                 child2.get_classname().unwrap_or_default()
   |

error[E0599]: no method named `get_class_name` found for struct `UIElement` in the current scope
  --> src\main.rs:50:48
   |
50 | ...                   child3.get_class_name().unwrap_or_default()
   |                              ^^^^^^^^^^^^^^
   |
help: there is a method `get_classname` with a similar name
   |
50 -                                         child3.get_class_name().unwrap_or_default()
50 +                                         child3.get_classname().unwrap_or_default()
   |

For more information about this error, try `rustc --explain E0599`.
warning: `test_uia` (bin "test_uia") generated 1 warning
error: could not compile `test_uia` (bin "test_uia") due to 3 previous errors; 1 warning emitted
